--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Hack Reactor Solo Week Project (SWP)",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
@@ -25,10 +25,12 @@
     "body-parser": "^1.18.2",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
+    "machinepack-spotify": "0.0.3",
     "mongoose": "^4.9.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "request": "^2.81.0"
+    "request": "^2.85.0",
+    "spotify-refresh": "^2.0.3"
   },
   "bugs": {
     "url": "https://github.com/davidbaek92/hrnyc14-solo-week/issues"
