--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "machinepack-spotify": "0.0.3",
+    "material-ui": "^0.20.0",
     "mongoose": "^4.9.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
