--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hack Reactor Solo Week Project (SWP)",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/index.js",
+    "start": "node /server/index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
