--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Hack Reactor Solo Week Project (SWP)",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/index.js",
-    "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "start": "nodemon server/index.js",    
+    "react-dev": "webpack -d --watch"
   },
   "repository": {
     "type": "git",
