--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^4.9.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-lazy-load": "^3.0.13",
     "request": "^2.85.0",
     "spotify-refresh": "^2.0.3"
   },
